SIXTH-153 -fixed active gender button underline on mobile

--- a/src/component/GenderButton/GenderButton.style.scss
+++ b/src/component/GenderButton/GenderButton.style.scss
@@ -8,7 +8,7 @@
             border-left: 0;
             border-right: 0;
             margin-bottom: 0;
-            padding: 0 23px;
+            //padding: 0 23px;
             padding-bottom: 49px;
             padding-top: 15px;
             pointer-events: none;
