--- a/src/component/Menu/Menu.style.scss
+++ b/src/component/Menu/Menu.style.scss
@@ -11,7 +11,15 @@
         &-Container {
             flex-direction: column;
             .HeaderGenders {
-                display: flex;
+                display: grid;
+                grid-auto-flow: column;
+                width: 280px;
+
+                .GenderButton {
+                    &-Button {
+                        width: 100%;
+                    }
+                }
             }
         }
     }
